# vida-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  install-lxc.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
crates/vida-core/: Cargo.toml
crates/vida-core/src/: access.rs  agent_loop.rs  auth.rs  config.rs  engine.rs  error.rs  lib.rs  mcp.rs  permissions.rs  remote.rs  telegram.rs  tool_validator.rs  workspace.rs
crates/vida-core/tests/: agent_loop_integration.rs
crates/vida-db/: Cargo.toml
crates/vida-db/migrations/: 001_initial.sql  002_teams.sql  003_workspaces.sql  004_mcp.sql  005_auth.sql  006_audit.sql  007_team_enhancements.sql
crates/vida-db/src/: lib.rs  models.rs  repository.rs
crates/vida-headless/: Cargo.toml
crates/vida-headless/src/: main.rs
crates/vida-providers/: Cargo.toml
crates/vida-providers/src/: anthropic.rs  google.rs  lib.rs  ollama.rs  openai.rs  registry.rs  traits.rs
crates/vida-security/: Cargo.toml
crates/vida-security/src/: encryption.rs  keychain.rs  lib.rs  pin.rs
docs/: PLAN_VIDA_VRAI_SYSTEME_EQUIPES_2026-03-30.md
docs/superpowers/plans/: 2026-03-28-vida-ai-phase1-core.md  2026-03-29-vida-ai-phase2a-ui.md  2026-03-29-vida-ai-phase3-teams.md  2026-03-30-vida-audit-report.md  2026-03-30-vida-lxc-213-runbook.md  2026-03-30-vida-remote-auth-protocol.md  2026-03-30-vida-tool-calling-comparatif.md  2026-03-30-vida-tool-calling.md  2026-03-30-vida-top-system-roadmap.md
docs/superpowers/specs/: 2026-03-28-vida-ai-phase1-core-design.md  2026-03-29-vida-ai-phase2a-ui-design.md  2026-03-29-vida-ai-phase2b-enrichments-design.md  2026-03-29-vida-ai-phase3-teams-design.md  2026-03-29-vida-ai-phase4-workspace-permissions-design.md  2026-03-29-vida-ai-phase5-mcp-design.md  2026-03-29-vida-ai-phase6-remote-packaging-design.md
remote-ui/: index.html
scripts/: install-lxc.sh  launch-vida.sh  vida-soak-report.py  vida-soak-sample.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: access.rs  auth.rs  chat.rs  config.rs  mcp.rs  mod.rs  permissions.rs  providers.rs  remote.rs  teams.rs  workspace.rs
src/components/auth/: AuthGate.tsx
src/components/chat/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  FilePreview.tsx  MessageBubble.css  MessageBubble.tsx  MessageList.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/mcp/: McpConfigModal.tsx  McpPanel.tsx  McpServerCard.tsx
src/components/settings/: GeneralSettings.tsx  ProviderSettings.tsx  RemoteSettings.tsx  SecuritySettings.tsx  SettingsModal.tsx  WorkspaceSettings.tsx
src/components/sidebar/: AgentItem.tsx  AgentList.tsx  SessionItem.tsx  SessionList.tsx
src/components/teams/: TeamCreator.tsx  TeamItem.tsx  TeamList.tsx  TeamMemberBadge.tsx
src/components/workspace/: PermissionPopup.tsx  WorkspaceSelector.tsx
src/design-system/: GlassButton.tsx  GlassCard.tsx  GlassInput.tsx  GlassPanel.tsx  StatusDot.tsx  tokens.css
src/hooks/: useAuth.ts  useMcp.ts  useProviders.ts  useSessions.ts  useStreamCompletion.ts  useTeamStreamCompletion.ts  useTeams.ts  useTheme.ts  useWorkspace.ts
src/lib/: tauri.ts
src/locales/en/: common.json
src/locales/fr/: common.json
src/locales/zh-CN/: common.json
src/stores/: store.ts
