[package]
name = "vida-ai"
version.workspace = true
edition.workspace = true

[features]
default = []
remote = ["vida-core/remote"]
telegram = ["vida-core/telegram", "remote"]

[dependencies]
tauri = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
vida-core = { path = "../crates/vida-core" }
vida-providers = { path = "../crates/vida-providers" }
vida-db = { path = "../crates/vida-db" }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
