[package]
name = "vida-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vida-providers = { path = "../vida-providers" }
vida-security = { path = "../vida-security" }
vida-db = { path = "../vida-db" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
async-trait = { workspace = true }
mockall = "0.12"
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }
