[package]
name = "vida-providers"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
mockall = "0.12"
tokio = { workspace = true, features = ["test-util"] }
